--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Diffusion-ES: Generative Evolutionary Search with Diffusion Models for <br> Trajectory Optimization</h1>
+          <h1 class="title is-1 publication-title">Trajectory Diffusion with Black-Box Reward Guidance for Autonomous Driving</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="">Brian Yang</a>,</span>
@@ -307,15 +307,15 @@
           </p>
         </div>
         <div>
-          <video id="nuplan1" controls loop playsinline width="33%">
+          <video id="nuplan1" autoplay controls muted loop playsinline width="33%">
             <source src="./static/videos/n1.mp4"
                     type="video/mp4">
           </video>
-          <video id="nuplan2" controls loop playsinline width="33%">
+          <video id="nuplan2" autoplay controls muted loop playsinline width="33%">
             <source src="./static/videos/n2.mp4"
                     type="video/mp4">
           </video>
-          <video id="nuplan3" controls loop playsinline width="33%">
+          <video id="nuplan3" autoplay controls muted loop playsinline width="33%">
             <source src="./static/videos/n3.mp4"
                     type="video/mp4">
           </video>
@@ -355,7 +355,7 @@
           </p>
         </div>
         <div>
-          <video id="longlang" controls loop playsinline width="100%">
+          <video id="longlang" autoplay controls muted loop playsinline width="100%">
             <source src="./static/videos/longlang.mp4"
                     type="video/mp4">
           </video>
