--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="TODO">
+        content="Diffusion-ES: Gradient-free Planning with Diffusion for Autonomous Driving and Zero-Shot Instruction Following">
   <meta name="keywords" content="diffusion, driving, guidance">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Diffusion-ES: Generative Evolutionary Search with Diffusion Models for Trajectory Optimization</title>
+  <title>Diffusion-ES: Gradient-free Planning with Diffusion for Autonomous Driving and Zero-Shot Instruction Following</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -88,7 +88,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Trajectory Diffusion with Black-Box Reward Guidance for Autonomous Driving</h1>
+          <h1 class="title is-1 publication-title">Diffusion-ES: Gradient-free Planning with Diffusion for Autonomous Driving and Zero-Shot Instruction Following</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="">Brian Yang</a>,</span>
@@ -386,7 +386,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{yang2024diffusiones,
   author    = {Yang, Brian and Su, Huangyuan and Gkanatsios, Nikos and Ke, Tsung-Wei and Jain, Ayush and Schenider, Jeff and Fragiadaki, Katerina},
-  title     = {Diffusion-ES: Generative Evolutionary Search with Diffusion Models for Trajectory Optimization},
+  title     = {Diffusion-ES: Gradient-free Planning with Diffusion for Autonomous Driving and Zero-Shot Instruction Following},
   journal   = {arXiv},
   year      = {2024},
 }
