--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/pdf/2402.06559.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -129,7 +129,7 @@
                 </a>
               </span>
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2402.06559"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -384,14 +384,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{yang2024diffusiones,
-  author    = {Yang, Brian and Su, Huangyuan and Gkanatsios, Nikos and Ke, Tsung-Wei and Jain, Ayush and Schenider, Jeff and Fragiadaki, Katerina},
-  title     = {Diffusion-ES: Gradient-free Planning with Diffusion for Autonomous Driving and Zero-Shot Instruction Following},
-  journal   = {arXiv},
-  year      = {2024},
-}
-This is not a real BibTeX yet, please do not cite this
-</code></pre>
+    <pre><code>@misc{yang2024diffusiones,
+      title={Diffusion-ES: Gradient-free Planning with Diffusion for Autonomous Driving and Zero-Shot Instruction Following}, 
+      author={Brian Yang and Huangyuan Su and Nikolaos Gkanatsios and Tsung-Wei Ke and Ayush Jain and Jeff Schneider and Katerina Fragkiadaki},
+      year={2024},
+      eprint={2402.06559},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}</code></pre>
   </div>
 </section>
 
