--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@
                   <span>arXiv</span>
                 </a>
               </span>
-              <!-- <br>
               <span class="link-block">
-                <i>Code release coming soon!</i>
-              </span> -->
+                <a href="https://github.com/bhyang/diffusion-es"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span>Code</span>
+                </a>
+              </span>
               <!-- Video Link. -->
               <!-- <span class="link-block">
                 <a href="https://www.youtube.com/watch?v=MrKrnHhk8IA"
@@ -171,7 +173,6 @@
                   <span>Data</span>
                   </a> -->
             </div>
-            <div>Code release soon!</div>
 
           </div>
         </div>
